--- a/style.css
+++ b/style.css
@@ -5,3 +5,41 @@
   margin: 0;
 
 }
+
+footer{
+  padding: 20px;
+  border-top: 2px solid black;
+}
+
+.colors-container{
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px 50px;
+  padding: 10px;
+  background: #eee;
+  border: 2px solid black;
+  grid-column-gap: 10px;
+  max-width: 290px;
+  margin-left: 30px;
+}
+
+.colors{
+  height: 50px;
+}
+
+#col1{
+  background: rgba(0, 226, 117);
+}
+
+#col2{
+  background: rgba(0, 53, 74);
+}
+
+#col3{
+  background: rgba(0, 166, 173);
+}
+
+#col4{
+  background: rgba(134, 202, 186);
+}
+
+#col5{background: rgba(136,211, 235);}
